fix: Ensure Doorbell credit has sufficient contrast.

--- a/app/styles/app.pcss
+++ b/app/styles/app.pcss
@@ -217,7 +217,7 @@ body #doorbell form textarea {
 }
 
 body #doorbell #doorbell-powered-by {
-    @apply block text-xs text-gray-500 text-center mt-8;
+    @apply block text-xs text-gray-600 text-center mt-8;
 }
 
 @tailwind utilities;
